--- a/app/views/catcher/index.html.erb
+++ b/app/views/catcher/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Catcher#index</h1>
-<p>Find me in app/views/catcher/index.html.erb</p>
+<h3><%= @requests[0].query_string %></h3>
+<% @requests.each do |request| %>
+<p>
+  <%= request.created_at.strftime('%H:%M:%S %d-%m-%Y') %>
+  <%= request.remote_ip %>
+  <%= request.method %>
+  <%= request.scheme %>
+</p>
+  <h4>Headers</h4>
+    <% request.request_headers.each do |header| %>
+      <p><%= header.key %> => <%= header.value %></p>
+    <% end %>
+    <h4>Params</h4>
+    <% request.request_params.each do |param| %>
+      <p><%= param.key %> => <%= param.value %></p>
+    <% end %>
+    <h4>Cookies</h4>
+    <% request.request_cookies.each do |cookie| %>
+      <p><%= cookie.key %> => <%= cookie.value %></p>
+    <% end %>
+<br>
+<% end %>
